Pedal/Programa/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:48:08 **** Incremental Build of configuration Debug for project Tesis_LGBS_main ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/command_control.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/command_control.d" -MT"Core/Src/command_control.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/command_control.o"
arm-none-eabi-gcc -o "Tesis_LGBS_main.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Gonzalo\Downloads\Tesis-LGBS\Programacion\uC\Tesis_LGBS_main\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Tesis_LGBS_main.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Tesis_LGBS_main.elf
 
arm-none-eabi-size  Tesis_LGBS_main.elf 
arm-none-eabi-objdump -h -S Tesis_LGBS_main.elf  > "Tesis_LGBS_main.list"
   text	   data	    bss	    dec	    hex	filename
  47448	    380	   6652	  54480	   d4d0	Tesis_LGBS_main.elf
Finished building: default.size.stdout
 
Finished building: Tesis_LGBS_main.list
 
18:11:03 **** Incremental Build of configuration Debug for project Pedal ****
make -j8 all 
arm-none-eabi-size  Pedal.elf 
   text	   data	    bss	    dec	    hex	filename
  10172	     12	   1684	  11868	   2e5c	Pedal.elf
Finished building: default.size.stdout
 
18:11:04 **** Incremental Build of configuration Debug for project Tesis_LGBS_main ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f1xx_hal_msp.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f1xx_hal_msp.d" -MT"Core/Src/stm32f1xx_hal_msp.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/stm32f1xx_hal_msp.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:131:11: error: redeclaration of 'pedalCommand' with no linkage
  131 |   uint8_t pedalCommand[MSG_SIZE];
      |           ^~~~~~~~~~~~
../Core/Src/main.c:129:11: note: previous declaration of 'pedalCommand' with type 'uint8_t[5]' {aka 'unsigned char[5]'}
  129 |   uint8_t pedalCommand[MSG_SIZE];
      |           ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
18:11:27 **** Incremental Build of configuration Debug for project Pedal ****
make -j8 all 
arm-none-eabi-size  Pedal.elf 
   text	   data	    bss	    dec	    hex	filename
  10172	     12	   1684	  11868	   2e5c	Pedal.elf
Finished building: default.size.stdout
 
18:11:28 **** Incremental Build of configuration Debug for project Tesis_LGBS_main ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Tesis_LGBS_main.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Gonzalo\Downloads\Tesis-LGBS\Programacion\uC\Tesis_LGBS_main\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Tesis_LGBS_main.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Tesis_LGBS_main.elf
 
arm-none-eabi-size  Tesis_LGBS_main.elf 
arm-none-eabi-objdump -h -S Tesis_LGBS_main.elf  > "Tesis_LGBS_main.list"
   text	   data	    bss	    dec	    hex	filename
  47448	    380	   6652	  54480	   d4d0	Tesis_LGBS_main.elf
Finished building: default.size.stdout
 
Finished building: Tesis_LGBS_main.list
 
